Added more projects: mining

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
 	<h1>Projects</h1>
 	<a href="racer.html">Chute Racer</a> <br>
-	<a href="collect.html">Collect the dots</a>
+	<a href="collect.html">Collect the dots</a> <br>
+	<a href="mining.html">Mine for gold</a><br>
 </body>
 
 </html>
