--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 	<title>Home</title>
 </head>
 <body>
-	<h1>Projects</h1>
-	<a href="racer.html">Chute Racer</a> <br>
-	<a href="collect.html">Collect the dots</a> <br>
-	<a href="mining.html">Mine for gold</a><br>
+	<div>
+		<h1>Little games</h1>
+		<h2>Messing around with javascript and HTML5</h2>
+		<a href="racer.html">Chute Racer</a> <br>
+		<a href="collect.html">Collect the dots</a> <br>
+		<a href="mining.html">Mine for gold</a><br>
+		<a href="woofdog.html">Pat the dog</a><br>
+	</div>
 </body>
 
 </html>
