--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 </head>
 <body>
 	<div>
+		<p>This is my personal website. It hosts some of my projects.</p>
+	</div>
+
+	<div>
 		<h1>Little games</h1>
 		<h2>Messing around with javascript and HTML5</h2>
 		<a href="racer.html">Chute Racer</a> <br>
