--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<a href="collect.html">Collect the dots</a> <br>
 		<a href="mining.html">Mine for gold</a><br>
 		<a href="woofdog.html">Pat the dog</a><br>
+		<a href="raindrops.html">Stay dry</a><br>
+
 	</div>
 </body>
 
