--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<title>Home</title>
-
+	<style type="text/css">
+		.modal-content{
+			float: right;
+			padding: 10px;
+		}
+	</style>
 
 </head>
 <body>
@@ -62,10 +67,10 @@
 								<a href="https://github.com/sgoedecke/home/blob/gh-pages/boxEngine.js">BoxEngine</a> is a dead-simple Javascript module for making 2d games on a HTML5 Canvas.
 								Here are some examples of it in use:
 							</p>
-							<a href="js/enginedemo.html">BoxEngine demo</a><br>
-							<a href="js/collect.html">Collect the dots</a> <br>
-							<a href="js/raindrops.html">Stay dry</a><br>
-							<a href="js/gravitytest.html">A first stab at implementing gravity with Box Engine</a><br>
+							<a data-target="#jsModalDemo" href="js/enginedemo.html" data-toggle="modal">BoxEngine demo</a><br>
+							<a data-target="#jsModalCollect" href="js/collect.html" role="button" class="btn" data-toggle="modal">Collect the dots</a><br>
+							<a data-target="#jsModalRaindrops" href="js/raindrops.html" role="button" class="btn" data-toggle="modal">Stay dry</a><br>
+							<a data-target="#jsModalGravity" href="js/gravitytest.html" role="button" class="btn" data-toggle="modal">Gravity (work in progress)</a><br>
 						</div>
 					</div>
 
@@ -91,8 +96,50 @@
 				</div>
 		  </div>
 
-		</div>
+			<div class="modal fade modal-lg" id="jsModalDemo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg" role="document">
+			    <div class="modal-content">
+			    </div>
+			  </div>
+			</div>
+			<div class="modal fade modal-lg" id="jsModalCollect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg" role="document">
+					<div class="modal-content">
 
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="myModalLabel">Stay dry</h4>
+						</div>
+							<div class="modal-body">
+								<iframe src='/js/collect.html'>Sorry, iFrames are not supported on your browser.</iframe>
+						</div>
+
+					</div>
+				</div>
+			</div>
+			<div class="modal fade modal-lg" id="jsModalRaindrops" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg" role="document">
+					<div class="modal-content">
+
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="myModalLabel">Stay dry</h4>
+						</div>
+							<div class="modal-body">
+								<iframe src='/js/raindrops.html'>Sorry, iFrames are not supported on your browser.</iframe>
+						</div>
+
+					</div>
+				</div>
+			</div>
+			<div class="modal fade modal-lg" id="jsModalGravity" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg" role="document">
+					<div class="modal-content">
+					</div>
+				</div>
+			</div>
+
+		</div>
 
 
 
@@ -100,6 +147,13 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script>
+			console.log("I'm here!")
+			$(document).on("hidden.bs.modal", function (e) {
+	    	$(e.target).removeData("bs.modal").find(".modal-content").empty();
+			});
+		</script>
+		<!-- <script src="boxEngine.js" type="text/javascript"></script> -->
 
 </body>
 
