--- a/js/gravitytest.html
+++ b/js/gravitytest.html
@@ -14,17 +14,22 @@
 			<!-- The size of the canvas determines the size of the game world. It has to be called "canvas" though. -->
 		</div>
 		<div>
-			<span id="console"> </span>	
+			<span id="console"> </span>
 			<!-- This must be called "console". -->
 		</div>
 
 		<script src="boxEngine.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		
+
 		// some sample code for how to use the engine
 
 			document.onkeydown = boxEngine.handleKeys; // for keyboard input
 			document.onkeyup = boxEngine.clearKeys;
+			var canvas = document.getElementById("canvas");
+			var ctx = canvas.getContext("2d");
+			var msgconsole = document.getElementById("console");
+			var highscore = document.getElementById("highscore");
+
 
 			// console messages
 			function msgDeath() {
@@ -103,7 +108,7 @@
 
 				// handle keystrokes for 2d movement
 				boxEngine.handleDefaultMovement(player);
-				
+
 
 				// draw game
 				boxEngine.drawGame();
@@ -125,7 +130,7 @@
 			boxEngine.switchPaused(); // pause the game
 			newGame(); // initialize variables, enemies, borders
 
-			setInterval(runGame, boxEngine.GAME_SPEED); 
+			setInterval(runGame, boxEngine.GAME_SPEED);
 		</script>
 	</body>
 	</html>
