--- a/js/raindrops.html
+++ b/js/raindrops.html
@@ -8,21 +8,31 @@
 	</head>
 
 	<body>
-	<h1>Stay dry!</h1>
-		<div>
-			<canvas id="canvas" width="400" height="400"></canvas>
-			<!-- The size of the canvas determines the size of the game world. It has to be called "canvas" though. -->
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			<h4 class="modal-title" id="myModalLabel">Stay dry</h4>
 		</div>
-		<div>
-			<span id="console"> </span>	
-			<!-- This must be called "console". -->
+			<div class="modal-body">
+			<div>
+				<!-- The size of the canvas determines the size of the game world. It has to be called "canvas" though. -->
+			</div>
+			<div>
+				<!-- This must be called "console". -->
+			</div>
 		</div>
+		<canvas id="canvas" width="400" height="400"></canvas>
+		<span id="console"> </span>
 
 		<script src="boxEngine.js" type="text/javascript"></script>
 		<script type="text/javascript">
-		
-		// some sample code for how to use the engine
 
+		// some sample code for how to use the engine
+			// variables
+			// var canvas = document.getElementById("canvas");
+			// var ctx = canvas.getContext("2d");
+			// var msgconsole = document.getElementById("console");
+			var highscore = document.getElementById("highscore");
+			// debugger;
 			document.onkeydown = boxEngine.handleKeys; // for keyboard input
 			document.onkeyup = boxEngine.clearKeys;
 
@@ -50,7 +60,7 @@
 			function placeRandomEnemy() {
 				var randint1 = (Math.random()); // generate random integer between 12 and 11
 				var randint2 = (Math.random());
-				var randenemy = new boxEngine.Enemy(randint1*canvas.width, 0, 10,10);
+				var randenemy = new boxEngine.Enemy(randint1*canvas.width, 5, 10,10);
 				randenemy.takeTurn = fallDownAI; // set AI to the default roaming AI in boxEngine
 				if (randint2 > 0.5) {
 					randenemy.colour = ALT_ENEMY_COLOUR;
@@ -73,7 +83,7 @@
 			function fallDownAI() {
 				// just falls down!
 				this.goDown();
-				
+
 				if (this.y_pos > canvas.height) {
 					this.destroy();
 				}
@@ -161,7 +171,7 @@
 			boxEngine.switchPaused(); // pause the game
 			newGame(); // initialize variables, enemies, borders
 
-			setInterval(runGame, boxEngine.GAME_SPEED); 
+			setInterval(runGame, boxEngine.GAME_SPEED);
 		</script>
 	</body>
 	</html>
